Update initial conditions

--- a/tds-vs-ey-model/tds-vs-ey-model-2.ipynb
+++ b/tds-vs-ey-model/tds-vs-ey-model-2.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fee6a3ef",
+   "id": "6e46cbdf",
    "metadata": {},
    "source": [
     "# Building on the previous model\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6282525",
+   "id": "912c328a",
    "metadata": {},
    "source": [
     "Now we define some constants for the model:"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5634d13",
+   "id": "cda5e54a",
    "metadata": {},
    "source": [
     "And initial conditions:"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954e6650",
+   "id": "367f6398",
    "metadata": {},
    "source": [
     "Let's add preinfusion:"
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "98801a52",
+   "id": "5a85e4c1",
    "metadata": {},
    "outputs": [
     {
@@ -309,8 +309,8 @@
     }
    ],
    "source": [
-    "# Initial conditions\n",
-    "y0 = sol[-1]\n",
+    "# Update initial conditions\n",
+    "if len(sol): y0 = sol[-1]\n",
     "\n",
     "# Simulation time\n",
     "t = np.linspace(0., num_t * dt, num_t)\n",
