Clean up analysis for DiFluid test

--- a/difluid-test/analysis.ipynb
+++ b/difluid-test/analysis.ipynb
@@ -16,48 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9702edb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<style>\n",
-       ".output_png {\n",
-       "    display: table-cell;\n",
-       "    text-align: center;\n",
-       "    vertical-align: middle;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.core.display import HTML\n",
-    "\n",
-    "# Center plots\n",
-    "HTML(\"\"\"\n",
-    "<style>\n",
-    ".output_png {\n",
-    "    display: table-cell;\n",
-    "    text-align: center;\n",
-    "    vertical-align: middle;\n",
-    "}\n",
-    "</style>\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "9fad5f41",
    "metadata": {},
    "outputs": [],
@@ -71,12 +29,14 @@
    "id": "1b834c68",
    "metadata": {},
    "source": [
+    "# The data\n",
+    "\n",
     "First let's load the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "20afc416",
    "metadata": {},
    "outputs": [
@@ -138,7 +98,7 @@
        "4   Instant coffee, 24 hours drying"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "976ab16f",
    "metadata": {},
    "outputs": [
@@ -260,7 +220,7 @@
        "24           100.00  Repeating solution 11 (next day, aluminum weig...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,8 +232,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "393d3181",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>solution_id</th>\n",
+       "      <th>difluid_sample_tds_1</th>\n",
+       "      <th>difluid_sample_temp_1</th>\n",
+       "      <th>difluid_sample_n_1</th>\n",
+       "      <th>difluid_sample_tds_2</th>\n",
+       "      <th>difluid_sample_temp_2</th>\n",
+       "      <th>difluid_sample_n_2</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>23</td>\n",
+       "      <td>7.65</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>1.34657</td>\n",
+       "      <td>7.57</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>1.34644</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>23</td>\n",
+       "      <td>7.63</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>1.34656</td>\n",
+       "      <td>7.59</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>1.34647</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>24</td>\n",
+       "      <td>9.68</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>1.35022</td>\n",
+       "      <td>9.55</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>1.34997</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>24</td>\n",
+       "      <td>9.65</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>1.35018</td>\n",
+       "      <td>9.58</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>1.35004</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>24</td>\n",
+       "      <td>9.68</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>1.35022</td>\n",
+       "      <td>9.61</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>1.35008</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    solution_id  difluid_sample_tds_1  difluid_sample_temp_1  \\\n",
+       "id                                                             \n",
+       "72           23                  7.65                   17.3   \n",
+       "73           23                  7.63                   17.3   \n",
+       "74           24                  9.68                   18.5   \n",
+       "75           24                  9.65                   17.9   \n",
+       "76           24                  9.68                   17.5   \n",
+       "\n",
+       "    difluid_sample_n_1  difluid_sample_tds_2  difluid_sample_temp_2  \\\n",
+       "id                                                                    \n",
+       "72             1.34657                  7.57                   17.4   \n",
+       "73             1.34656                  7.59                   17.2   \n",
+       "74             1.35022                  9.55                   18.6   \n",
+       "75             1.35018                  9.58                   17.7   \n",
+       "76             1.35022                  9.61                   17.7   \n",
+       "\n",
+       "    difluid_sample_n_2 notes  \n",
+       "id                            \n",
+       "72             1.34644   NaN  \n",
+       "73             1.34647   NaN  \n",
+       "74             1.34997   NaN  \n",
+       "75             1.35004   NaN  \n",
+       "76             1.35008   NaN  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trials = pd.read_excel('results.xlsx', sheet_name='trials', index_col='id')\n",
+    "trials.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82096a62",
+   "metadata": {},
+   "source": [
+    "Let's drop solutions 6, 11, 12, and 22, which are repeated later to address issues in the method used the first time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9347061f",
    "metadata": {},
    "outputs": [
     {
@@ -410,158 +522,6 @@
     }
    ],
    "source": [
-    "trials = pd.read_excel('results.xlsx', sheet_name='trials', index_col='id')\n",
-    "trials.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "82096a62",
-   "metadata": {},
-   "source": [
-    "Let's solutions 6, 11, 12, and 22, which are repeated later to address issues in the method used the first time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "9347061f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>solution_id</th>\n",
-       "      <th>difluid_sample_tds_1</th>\n",
-       "      <th>difluid_sample_temp_1</th>\n",
-       "      <th>difluid_sample_n_1</th>\n",
-       "      <th>difluid_sample_tds_2</th>\n",
-       "      <th>difluid_sample_temp_2</th>\n",
-       "      <th>difluid_sample_n_2</th>\n",
-       "      <th>notes</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>23</td>\n",
-       "      <td>7.65</td>\n",
-       "      <td>17.3</td>\n",
-       "      <td>1.34657</td>\n",
-       "      <td>7.57</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>1.34644</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>23</td>\n",
-       "      <td>7.63</td>\n",
-       "      <td>17.3</td>\n",
-       "      <td>1.34656</td>\n",
-       "      <td>7.59</td>\n",
-       "      <td>17.2</td>\n",
-       "      <td>1.34647</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>24</td>\n",
-       "      <td>9.68</td>\n",
-       "      <td>18.5</td>\n",
-       "      <td>1.35022</td>\n",
-       "      <td>9.55</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>1.34997</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>24</td>\n",
-       "      <td>9.65</td>\n",
-       "      <td>17.9</td>\n",
-       "      <td>1.35018</td>\n",
-       "      <td>9.58</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>1.35004</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>24</td>\n",
-       "      <td>9.68</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>1.35022</td>\n",
-       "      <td>9.61</td>\n",
-       "      <td>17.7</td>\n",
-       "      <td>1.35008</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    solution_id  difluid_sample_tds_1  difluid_sample_temp_1  \\\n",
-       "id                                                             \n",
-       "72           23                  7.65                   17.3   \n",
-       "73           23                  7.63                   17.3   \n",
-       "74           24                  9.68                   18.5   \n",
-       "75           24                  9.65                   17.9   \n",
-       "76           24                  9.68                   17.5   \n",
-       "\n",
-       "    difluid_sample_n_1  difluid_sample_tds_2  difluid_sample_temp_2  \\\n",
-       "id                                                                    \n",
-       "72             1.34657                  7.57                   17.4   \n",
-       "73             1.34656                  7.59                   17.2   \n",
-       "74             1.35022                  9.55                   18.6   \n",
-       "75             1.35018                  9.58                   17.7   \n",
-       "76             1.35022                  9.61                   17.7   \n",
-       "\n",
-       "    difluid_sample_n_2 notes  \n",
-       "id                            \n",
-       "72             1.34644   NaN  \n",
-       "73             1.34647   NaN  \n",
-       "74             1.34997   NaN  \n",
-       "75             1.35004   NaN  \n",
-       "76             1.35008   NaN  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "trials.drop(trials[trials.solution_id.isin([6, 11, 12, 22])].index, inplace=True)\n",
     "trials.tail()"
    ]
@@ -571,12 +531,14 @@
    "id": "c65cb847",
    "metadata": {},
    "source": [
+    "# Measured TDS vs. prepared TDS\n",
+    "\n",
     "For each solution we can calculate prepared tds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a1c34a1a",
    "metadata": {},
    "outputs": [
@@ -701,7 +663,7 @@
        "24      9.996000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,17 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "3d1a50c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbbf7ed270>"
+       "<matplotlib.legend.Legend at 0x7f58e42f1480>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -788,22 +750,24 @@
    "id": "1dcdbcda",
    "metadata": {},
    "source": [
+    "# Instant coffee solutions\n",
+    "\n",
     "Let's start by looking just at the coffee measurements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "85ca8057",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbbd2a2590>"
+       "<matplotlib.legend.Legend at 0x7f58e418c700>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -879,17 +843,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6f320263",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbbd2a0400>"
+       "<matplotlib.legend.Legend at 0x7f58e418ce80>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -948,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "cd9dee11",
    "metadata": {},
    "outputs": [
@@ -961,7 +925,7 @@
        " array([0.99459936])]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d9eb2252",
    "metadata": {},
    "outputs": [
@@ -1032,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "383dcdd9",
    "metadata": {},
    "outputs": [
@@ -1060,17 +1024,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3a9ff396",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbbd133d60>"
+       "<matplotlib.legend.Legend at 0x7f58e1c57b50>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1136,22 +1100,24 @@
    "id": "15f52b71",
    "metadata": {},
    "source": [
+    "# Sucrose solutions\n",
+    "\n",
     "Now let's look just at the sugar measurements and compare with the reference curves."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0314ebb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbbd12e7a0>"
+       "<matplotlib.legend.Legend at 0x7f58e1c429b0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1222,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "93c0c6fc",
    "metadata": {},
    "outputs": [
@@ -1327,22 +1293,24 @@
    "id": "54933ad8",
    "metadata": {},
    "source": [
+    "# TDS vs. refractive index\n",
+    "\n",
     "We can also look at the relationship between refractive index and TDS for all measurements."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "6261675b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbb95c13c0>"
+       "<matplotlib.legend.Legend at 0x7f58dfbb0dc0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1401,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "fe6b64de",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1379,7 @@
        "array([1.48137345e-06, 1.76525141e-03, 1.33298872e+00])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,17 +1396,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e3fd4ac3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbbbd49fb50>"
+       "<matplotlib.legend.Legend at 0x7f58ddfcf310>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
