Fix runtime error

--- a/gas-pycnometry-2/analysis.ipynb
+++ b/gas-pycnometry-2/analysis.ipynb
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a9e1d31b550>"
+       "<matplotlib.legend.Legend at 0x7060c44a76a0>"
       ]
      },
      "execution_count": 5,
@@ -518,7 +518,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a9e18c431f0>"
+       "<matplotlib.legend.Legend at 0x7060bfef6e30>"
       ]
      },
      "execution_count": 8,
@@ -955,7 +955,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a9e18eaa2c0>"
+       "<matplotlib.legend.Legend at 0x7060c0008160>"
       ]
      },
      "execution_count": 17,
@@ -1072,7 +1072,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a9e18e514e0>"
+       "<matplotlib.legend.Legend at 0x7060c00f9f90>"
       ]
      },
      "execution_count": 19,
@@ -1263,7 +1263,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a9e18f9cb50>"
+       "<matplotlib.legend.Legend at 0x7060c02617e0>"
       ]
      },
      "execution_count": 21,
@@ -1905,23 +1905,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/michael/.local/lib/python3.10/site-packages/matplotlib/axes/_axes.py:1185: RuntimeWarning: All-NaN axis encountered\n",
-      "  miny = np.nanmin(masked_verts[..., 1])\n",
-      "/home/michael/.local/lib/python3.10/site-packages/matplotlib/axes/_axes.py:1186: RuntimeWarning: All-NaN axis encountered\n",
-      "  maxy = np.nanmax(masked_verts[..., 1])\n",
-      "/home/michael/.local/lib/python3.10/site-packages/matplotlib/axes/_axes.py:1185: RuntimeWarning: All-NaN axis encountered\n",
-      "  miny = np.nanmin(masked_verts[..., 1])\n",
-      "/home/michael/.local/lib/python3.10/site-packages/matplotlib/axes/_axes.py:1186: RuntimeWarning: All-NaN axis encountered\n",
-      "  maxy = np.nanmax(masked_verts[..., 1])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7a9e1d319330>"
+       "<matplotlib.legend.Legend at 0x7060c01ad660>"
       ]
      },
      "execution_count": 29,
@@ -1971,7 +1957,8 @@
     "        yerrs = densities.std() * 1.96\n",
     "\n",
     "        # Plot\n",
-    "        ax.errorbar(i, ys, yerr=yerrs, fmt='none', capsize=10, color=bag_colors[i], alpha=0.5)\n",
+    "        if len(densities) > 1:\n",
+    "            ax.errorbar(i, ys, yerr=yerrs, fmt='none', capsize=10, color=bag_colors[i], alpha=0.5)\n",
     "        ax.scatter(i, ys, color=bag_colors[i], label=label, s=75)\n",
     "        \n",
     "    # Get ground trials\n",
@@ -1987,7 +1974,8 @@
     "        yerrs = densities.std() * 1.96\n",
     "\n",
     "        # Plot\n",
-    "        ax.errorbar(i, ys, yerr=yerrs, fmt='none', capsize=10, color=bag_colors[i], alpha=0.5)\n",
+    "        if len(densities) > 1:\n",
+    "            ax.errorbar(i, ys, yerr=yerrs, fmt='none', capsize=10, color=bag_colors[i], alpha=0.5)\n",
     "        ax.scatter(i, ys, color=bag_colors[i], s=75)\n",
     "\n",
     "    # Get tamped densities\n",
@@ -1995,7 +1983,7 @@
     "\n",
     "    if not depths_this_bag.empty:\n",
     "        # Calculate densities\n",
-    "        volumes = depths.apply(get_volume, axis=1)\n",
+    "        volumes = depths_this_bag.apply(get_volume, axis=1)\n",
     "        densities = depths_this_bag.weight_in_basket / volumes\n",
     "\n",
     "        # Calculate mean and standard deviation\n",
@@ -2003,7 +1991,8 @@
     "        yerrs = densities.std() * 1.96\n",
     "\n",
     "        # Plot\n",
-    "        ax.errorbar(i, ys, yerr=yerrs, fmt='none', capsize=10, color=bag_colors[i], alpha=0.5)\n",
+    "        if len(densities) > 1:\n",
+    "            ax.errorbar(i, ys, yerr=yerrs, fmt='none', capsize=10, color=bag_colors[i], alpha=0.5)\n",
     "        ax.scatter(i, ys, color=bag_colors[i], s=75)\n",
     "\n",
     "# Add text labels\n",
